m.txt
freedomuser@freedom:~/shared_folder$ sudo sh compile.sh
memory.c:6:1: warning: data definition has no type or storage class
    6 | heap_start = 0;
      | ^~~~~~~~~~
memory.c:6:1: warning: type defaults to 'int' in declaration of 'heap_start' [-Wimplicit-int]
memory.c:6:1: error: conflicting types for 'heap_start'; have 'int'
In file included from memory.c:2:
memory.h:10:17: note: previous declaration of 'heap_start' with type 'uint32_t' {aka 'long unsigned int'}
   10 | extern uint32_t heap_start;
      |                 ^~~~~~~~~~
memory.c:7:1: warning: data definition has no type or storage class
    7 | heap_end = 0;
      | ^~~~~~~~
memory.c:7:1: warning: type defaults to 'int' in declaration of 'heap_end' [-Wimplicit-int]
memory.c:7:1: error: conflicting types for 'heap_end'; have 'int'
memory.h:11:17: note: previous declaration of 'heap_end' with type 'uint32_t' {aka 'long unsigned int'}
   11 | extern uint32_t heap_end;
      |                 ^~~~~~~~
i386-elf-ld: warning: ./bin/doom_os.elf has a LOAD segment with RWX permissions